--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,9 +1,9 @@
 window {
     margin: 0px;
     border: 2px none #839496;
-    border-width: 2px;
+    border-width: 1px;
     background-color: #002b36;
-    border-radius: 0px;
+    border-radius: 7px;
 }
 
 #input {
@@ -11,15 +11,15 @@ window {
     margin: 4px;
     padding-left: 20px;
     border: none;
-    border-width: 2px;
+    border-width: 1px;
     color: #839496;
-    font-family: BlexMono Nerd Font;
+    font-family: JetBrainsMono Nerd Font;
     font-size: 16px;
     font-weight: bold;
     background-color: none;
     /* background: ; */
     outline: none;
-    border-radius: 0px;
+    border-radius: 7px;
     margin: 10px 13px;
     margin-bottom: 2px;
 }
@@ -35,13 +35,13 @@ window {
     font-weight: normal;
     background-color: transparent;
     /* background-color: red; */
-    border-radius: 0px;
+    border-radius: 7px;
 }
 
 #outer-box {
     margin: 0px;
     border: 0px solid #839496;
-    border-radius: 0px;
+    border-radius: 7px;
     background-color: #002b36;
 }
 
@@ -49,7 +49,7 @@ window {
     background-color: transparent;
     margin-top: 5px;
     border: none;
-    border-radius: 0px;
+    border-radius: 7px;
     margin-bottom: 5px;
 }
 
@@ -60,22 +60,22 @@ window {
 #img:selected {
     background-color: #839496;
     margin-right: 10px;
-    border-radius: 0px;
+    border-radius: 7px;
 }
 
 #img:unselected {
     background-color: transparent;
     margin-right: 10px;
-    border-radius: 0px;
+    border-radius: 7px;
 }
 
 #text:selected {
     color: #839496;
     margin: 0px 0px;
     border: none;
-    border-color: #839496;
-    border-width: 2px;
-    border-radius: 0px;
+    border-color: #586e75;
+    border-width: 1px;
+    border-radius: 7px;
     background-color: transparent;
 }
 
@@ -83,22 +83,22 @@ window {
     color: #839496;
     margin: 0px 0px;
     border: none;
-    border-color: #839496;
-    border-width: 2px;
-    border-radius: 0px;
+    border-color: #586e75;
+    border-width: 1px;
+    border-radius: 7px;
     background-color: transparent;
 }
 
 #entry {
     margin: 0px 0px;
     border: none;
-    border-radius: 0px;
+    border-radius: 7px;
     background-color: transparent;
 }
 
 #entry:selected {
     margin: 0px 0px;
     border: none;
-    border-radius: 0px;
+    border-radius: 7px;
     background-color: transparent;
 }
