--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     border: none;
-    font-family: JetBrainsMono Nerd Font;
+    font-family: BlexMono Nerd Font;
     font-weight: 800;
     font-size: 13px;
     min-height: 0;
