--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -1,5 +1,5 @@
 window {
-    font-family: JetBrainsMono Nerd Font;
+    font-family: BlexMono Nerd Font;
     font-size: 13pt;
     color: #839496; /* text */
     background-color: rgba(0, 43, 54, 0.66);
