--- a/wofi/style.css
+++ b/wofi/style.css
@@ -13,7 +13,7 @@ window {
     border: none;
     border-width: 1px;
     color: #839496;
-    font-family: JetBrainsMono Nerd Font;
+    font-family: BlexMono Nerd Font;
     font-size: 16px;
     font-weight: bold;
     background-color: none;
